<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="DSV2_MinMaxEffTime" Id="{972720ff-074c-4d87-ad51-2f08769db503}">
    <Declaration><![CDATA[TYPE DSV2_MinMaxEffTime :
STRUCT
	iProductRecipeNo			: INT;
	ARiTransferStationNo		: ARRAY [0..iProductRecipeStepArrayQty] OF INT;
	ARiStnSeqRepNo 		: ARRAY [0..iProductRecipeStepArrayQty] OF INT;
	ARiMinTime 				: ARRAY [0..iProductRecipeStepArrayQty] OF INT;
	ARiMaxTime 				: ARRAY [0..iProductRecipeStepArrayQty] OF INT;
	ARiEffTime 				: ARRAY [0..iProductRecipeStepArrayQty] OF INT;

END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>